--- a/package.json
+++ b/package.json
@@ -8,8 +8,33 @@
     "start": "next start"
   },
   "dependencies": {
+    "@chakra-ui/icons": "^1.0.7",
+    "@chakra-ui/react": "^1.4.1",
+    "@emotion/react": "^11",
+    "@emotion/styled": "^11",
+    "@types/bcrypt": "^3.0.0",
+    "@types/jsonwebtoken": "^8.5.1",
+    "@types/mongoose": "^5.10.4",
+    "bcrypt": "^5.0.1",
+    "crypto-random-string": "^4.0.0",
+    "date-fns": "^2.19.0",
+    "flag-icon-css": "^3.5.0",
+    "framer-motion": "^4",
+    "jsonwebtoken": "^8.5.1",
+    "mongoose": "^5.12.2",
     "next": "10.0.9",
+    "nookies": "^2.5.2",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "react-icons": "^4.2.0",
+    "react-query": "^3.13.0"
+  },
+  "devDependencies": {
+    "@types/node": "^14.14.37",
+    "@types/react": "^17.0.3",
+    "autoprefixer": "^10.2.5",
+    "postcss": "^8.2.8",
+    "tailwindcss": "^2.0.4",
+    "typescript": "^4.2.3"
   }
 }
