--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "next": "10.0.9",
     "nookies": "^2.5.2",
     "postcss": "^8.2.10",
+    "postcss-import": "^14.0.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-icons": "^4.2.0",
