--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "next build",
+    "build": "npx tailwindcss build styles/globals.css -o styles/index.css && next build",
     "start": "next start"
   },
   "dependencies": {
