--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/bcrypt": "^3.0.0",
     "@types/jsonwebtoken": "^8.5.1",
     "@types/mongoose": "^5.10.4",
+    "@types/react-query": "^1.1.2",
     "autoprefixer": "^10.2.5",
     "bcrypt": "^5.0.1",
     "crypto-random-string": "^4.0.0",
