--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "postcss": "^8.2.10",
     "postcss-import": "^14.0.1",
     "react": "17.0.2",
+    "react-contexify": "^5.0.0",
     "react-dom": "17.0.2",
     "react-icons": "^4.2.0",
     "react-query": "^3.13.0",
