--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@emotion/react": "^11",
     "@emotion/styled": "^11",
     "@types/bcrypt": "^3.0.0",
+    "@types/googlemaps": "^3.43.3",
     "@types/jsonwebtoken": "^8.5.1",
     "@types/mongoose": "^5.10.4",
     "@types/react-query": "^1.1.2",
@@ -28,6 +29,7 @@
     "nookies": "^2.5.2",
     "postcss": "^8.2.10",
     "postcss-import": "^14.0.1",
+    "primereact": "^6.3.1",
     "react": "17.0.2",
     "react-contexify": "^5.0.0",
     "react-dom": "17.0.2",
