--- a/tsconfig.json
+++ b/tsconfig.json
@@ -27,9 +27,10 @@
   "include": [
     "next-env.d.ts",
     "**/*.ts",
-    "**/*.tsx"
+    "**/*.tsx",
   ],
   "exclude": [
-    "node_modules"
+    "node_modules",
+    ".vscode"
   ]
 }
