--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@types/googlemaps": "^3.43.3",
     "@types/jsonwebtoken": "^8.5.1",
     "@types/mongoose": "^5.10.4",
+    "@types/quill": "^2.0.6",
     "@types/react-query": "^1.1.2",
     "autoprefixer": "^10.2.5",
     "bcrypt": "^5.0.1",
@@ -30,11 +31,13 @@
     "postcss": "^8.2.10",
     "postcss-import": "^14.0.1",
     "primereact": "^6.3.1",
+    "quill-delta": "^4.2.2",
     "react": "17.0.2",
     "react-contexify": "^5.0.0",
     "react-dom": "17.0.2",
     "react-icons": "^4.2.0",
     "react-query": "^3.13.0",
+    "react-quill": "^1.3.5",
     "tailwindcss": "^2.1.1"
   },
   "devDependencies": {
