--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start -H 0.0.0.0 -p ${PORT:-8080}",
+    "start:prod": "next start -H 0.0.0.0 -p ${PORT:-8080}",
+    "start:dev": "next start -H 0.0.0.0 -p ${PORT:-8000}",
     "export": "yarn build && next export -o _static"
   },
   "dependencies": {
