Changed pm2 app names for prod and dev to match actual values

--- a/.github/workflows/deploy_prod.yaml
+++ b/.github/workflows/deploy_prod.yaml
@@ -20,4 +20,4 @@ jobs:
             git checkout main
             git pull
             yarn build
-            pm2 restart prod
+            pm2 restart ecosystem.config.js --only "sot-next-prod"
