--- a/.github/workflows/deploy_dev.yaml
+++ b/.github/workflows/deploy_dev.yaml
@@ -20,4 +20,4 @@ jobs:
             git checkout dev
             git pull
             yarn build
-            pm2 restart dev
+            pm2 restart ecosystem.config.js --only "sot-next-dev"
