--- a/.github/workflows/law_scheduler.yaml
+++ b/.github/workflows/law_scheduler.yaml
@@ -3,10 +3,17 @@ on:
   schedule:
     - cron: '* * * * *'
 jobs:
-  scheduler:
+  scheduler-prod:
     runs-on: ubuntu-latest
     steps:
       - run: |
           curl --request POST \
           --url '${{ secrets.APP_URL }}/api/cron/laws' \
+          --header 'Authorization: Bearer ${{ secrets.ACTIONS_KEY }}'
+  scheduler-dev:
+    runs-on: ubuntu-latest
+    steps:
+      - run: |
+          curl --request POST \
+          --url '${{ secrets.APP_DEV_URL }}/api/cron/laws' \
           --header 'Authorization: Bearer ${{ secrets.ACTIONS_KEY }}'
