--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "sot-next",
-  "version": "0.1.0",
+  "version": "0.2.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
@@ -29,15 +29,15 @@
     "framer-motion": "^4",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.12.2",
-    "next": "10.0.9",
+    "next": "12",
     "nookies": "^2.5.2",
     "postcss": "^8.2.10",
     "postcss-import": "^14.0.1",
     "primereact": "^6.3.1",
     "quill-delta": "^4.2.2",
-    "react": "17.0.2",
+    "react": "^17.0.2",
     "react-contexify": "^5.0.0",
-    "react-dom": "17.0.2",
+    "react-dom": "^17.0.2",
     "react-icons": "^4.2.0",
     "react-query": "^3.13.0",
     "react-quill": "^1.3.5",
