--- a/package.json
+++ b/package.json
@@ -18,10 +18,13 @@
     "@types/googlemaps": "^3.43.3",
     "@types/jsonwebtoken": "^8.5.1",
     "@types/mongoose": "^5.10.4",
+    "@types/nodemailer": "^6.4.4",
+    "@types/nodemailer-smtp-transport": "^2.7.5",
     "@types/quill": "^2.0.6",
     "@types/react-query": "^1.1.2",
     "autoprefixer": "^10.2.5",
     "bcrypt": "^5.0.1",
+    "caniuse-lite": "^1.0.30001279",
     "crypto-random-string": "^4.0.0",
     "date-fns": "^2.19.0",
     "email-deep-validator": "^3.3.0",
@@ -30,6 +33,8 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.12.2",
     "next": "12",
+    "nodemailer": "^6.7.0",
+    "nodemailer-smtp-transport": "^2.7.4",
     "nookies": "^2.5.2",
     "postcss": "^8.2.10",
     "postcss-import": "^14.0.1",
@@ -46,6 +51,6 @@
   "devDependencies": {
     "@types/node": "^14.14.37",
     "@types/react": "^17.0.3",
-    "typescript": "^4.2.3"
+    "typescript": "^4.4.4"
   }
 }
