--- a/package.json
+++ b/package.json
@@ -17,7 +17,6 @@
     "@types/bcrypt": "^3.0.0",
     "@types/googlemaps": "^3.43.3",
     "@types/jsonwebtoken": "^8.5.1",
-    "@types/mongoose": "^5.10.4",
     "@types/nodemailer": "^6.4.4",
     "@types/nodemailer-direct-transport": "^1.0.32",
     "@types/nodemailer-smtp-transport": "^2.7.5",
@@ -28,10 +27,9 @@
     "crypto-random-string": "^4.0.0",
     "date-fns": "^2.19.0",
     "email-deep-validator": "^3.3.0",
-    "flag-icon-css": "^3.5.0",
     "framer-motion": "^4",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^5.12.2",
+    "mongoose": "6.0.12",
     "next": "12",
     "nodemailer": "^6.7.0",
     "nodemailer-smtp-transport": "^2.7.4",
@@ -49,7 +47,7 @@
     "tailwindcss": "^2.1.1"
   },
   "devDependencies": {
-    "@types/node": "^14.14.37",
+    "@types/node": "^16.11.11",
     "@types/react": "^17.0.3",
     "typescript": "^4.4.4"
   }
